--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2024"
 
 [dependencies]
 chrono = { version = "0.4.43", default-features = false, features = ["clock", "alloc", "std", "now"] }
+env_logger = { version = "0.11.8", features = ["color"] }
+log = { version = "0.4.29", features = ["std"] }
 memchr = { version = "2.7.6", features = ["logging"] }
 thiserror = "2.0.18"
