--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ log = { version = "0.4.29", features = ["std"] }
 memchr = { version = "2.7.6", features = ["logging"] }
 ratatui = "0.30.0"
 thiserror = "2.0.18"
-time = { version = "0.3.46", features = ["parsing", "macros"] }
+time = { version = "0.3.46", features = ["parsing", "macros", "formatting"] }
